--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,25 @@
-# Custom
-*zzz.md
+# Custom - Project specific
+*zzz*.md
 *.env
-*.venv
-sd-data/*
+.env
+.venv/
+sd-data/
+models/
+outputs/
+local_llm/.venv/
+
+# Binary and media files
+*.png
+*.jpg
+*.jpeg
+*.gif
+*.mp4
+*.mp3
+*.wav
+*.cast
+
+# Docker volumes
+docker-data/
 
 # Logs
 logs
